# civic-interconnect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci-python.yml  release-python.yml  weekly_link_checker.yml
0.0.2/en/: index.html
0.0.2/en/quick-start/: index.html
0.0.2/search/: search_index.json
0.0.3/en/: index.html
0.0.3/en/examples/: index.html
0.0.4/: 404.html
0.0.4/en/cli/: index.html
0.0.4/en/quick-start/: index.html
0.0.4/en/specs/: index.html
0.0.4/search/: search_index.json
0.0.6/: 404.html  sitemap.xml
0.0.6/en/quick-start/: index.html
0.0.6/en/schemas/: index.html
0.0.6/en/specs/: index.html
adapters/eu/ted_eforms/: README.md  about.yaml
adapters/eu/ted_eforms/python/: pyproject.toml
adapters/eu/ted_eforms/python/src/ci_adapters/eu/: __init__.py
adapters/eu/ted_eforms/python/src/ci_adapters/eu/ted_eforms/: __init__.py  adapter.py  mapping.py
adapters/eu/ted_eforms/python/tests/: test_smoke.py
crates/cep-core/: Cargo.toml  build.rs
crates/cep-core/src/: lib.rs
crates/cep-core/src/common/: assets.rs  canonical.rs  errors.rs  hash.rs  id.rs  localization.rs  mod.rs  normalizer.rs  schema_registry.rs  snfei.rs  timestamp.rs
crates/cep-core/src/ctag/: generated.rs  manual.rs
crates/cep-core/src/entity/: generated.rs  identifiers.rs  manual.rs  mod.rs  normalizer.rs  resolver.rs  tests.rs
crates/cep-core/src/exchange/: generated.rs  manual.rs
crates/cep-core/src/ffi/: entity_bindings.rs  mod.rs
crates/cep-core/src/p3tag/: generated.rs  manual.rs  mod.rs  status.rs
crates/cep-core/src/relationship/: generated.rs  manual.rs
crates/cep-py/: Cargo.toml
crates/cep-py/src/: lib.rs
dev/: 404.html  objects.inv  sitemap.xml
dev/en/: index.html
dev/en/00_overview/: index.html
dev/en/01_reference/: index.html
dev/en/02_explanations/: index.html
dev/en/03_implementation/: index.html
dev/en/04_verticals/: index.html
dev/en/05_examples/: index.html
dev/en/DATA_SOURCES/: index.html
dev/en/api/: index.html
dev/en/cli/: index.html
dev/en/examples/: index.html
dev/en/provenance/: index.html
dev/en/quick-start/: index.html
dev/en/schemas/: index.html
dev/en/specs/: index.html
dev/js/: validator.js
dev/search/: search_index.json
docs/en/: api.md  quick-start.md  schemas.md
docs/en/00_overview/: README.md
docs/en/01_reference/: README.md
docs/en/02_explanations/: 01_design_principles.md  02_neutrality_and_values.md  03_why_category_theory.md  04_tradeoffs_and_alternatives.md  README.md
docs/en/03_implementation/: README.md
docs/en/04_verticals/: 01_how_verticals_work.md  (+1 more)
examples/: README.md
examples/entity/: entity-with-snfei.json
localization/: base.yaml
localization/ca/: base.yaml  on.yaml  qc.yaml
localization/eu/: base.yaml
localization/schemas/: cep.localization.schema.json
localization/us/: base.yaml  ca.yaml  ma.yaml  mn.yaml  ny.yaml
schemas/: README.md  cep.ctag.schema.json  cep.entity.identifier-scheme.schema.json  cep.entity.schema.json  cep.exchange.schema.json  cep.p3tag.schema.json  cep.record-envelope.schema.json  cep.relationship.schema.json  cep.vocabulary.schema.json
schemas/core/: cep.entity.schema.json  cep.exchange.schema.json  cep.record-envelope.schema.json  cep.relationship.schema.json
specifications/: snfei-specification.md
src/rust/: README.md
src/rust/cep-entity/: Cargo.toml
src/rust/cep-entity/examples/: dump_from_raw.rs
src/rust/cep-entity/src/: builder.rs  entity.rs  identifiers.rs  lib.rs
src/rust/cep-entity/tests/: from_examples_raw.rs
src/rust/cep-exchange/: Cargo.toml
src/rust/cep-exchange/src/: builder.rs  exchange.rs  lib.rs  provenance.rs  value.rs
src/rust/cep-relationship/: Cargo.toml
src/rust/cep-relationship/src/: bilateral.rs  builder.rs  lib.rs  multilateral.rs  relationship.rs
src/rust/cep-snfei/: Cargo.toml
src/rust/cep-snfei/src/: generator.rs  lib.rs  localization.rs  normalizer.rs
test_vectors/entity/: entity_school_district_01.json
test_vectors/relationship/: relationship_title1_01.json
tools/: __init__.py  audit_identity_collisions.py  codegen_rust.py  fetch_procurement_it_anac_sample.py  update_localization_meta.py  validate_verticals.py
typings/cep_py/: __init__.pyi
vocabularies/: ctag-type.v1.0.0.json  entity-identifier-scheme.v1.0.0.json  entity-type.v1.0.0.json  exchange-role.v1.0.0.json  exchange-type.v1.0.0.json  identifier-scheme.v1.0.0.json  party-role.v1.0.0.json  relationship-type.v1.0.0.json  resolution-method.v1.0.0.json  source-system.v1.0.0.json  value-type.v1.0.0.json
vocabulary/: README.md
vocabulary/core/: ctag-type.v1.0.0.json  entity-identifier-scheme.v1.0.0.json
(+459 files in other folders)
