[workspace]
resolver = "2"
members = [
    "crates/cep-core",
    "crates/cep-py",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Civic Interconnect Standard Rust Workspace"
repository = "https://github.com/civic-interconnect/civic-interconnect"
keywords = ["civic", "interconnect", "contract", "government", "exchange"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
pretty_assertions = "1.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0.17"
unicode-normalization = "0.1"
