[workspace]
resolver = "2"
members = [
    "crates/cep-core",
    "crates/cep-py",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
pretty_assertions = "1.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0.17"
unicode-normalization = "0.1"
