[package]
name = "cep-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Civic Interconnect core Rust library (Entity, Relationship, Exchange, P3Tag)."
repository = "https://github.com/civic-interconnect/civic-interconnect"
readme = "../../README.md"
authors = ["Civic Interconnect"]
keywords = ["civic", "interconnect", "protocol", "government", "provenance"]

[lib]
name = "cep_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
once_cell = "1.19"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.17"
unicode-normalization = "0.1"

