[package]
name = "cep-entity"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Entity records for the Civic Exchange Protocol (CEP)"
repository = "https://github.com/civic-interconnect/civic-interconnect"
keywords = ["civic", "interconnect", "contract", "government", "identity"]
categories = ["data-structures"]

[dependencies]
cep-core = { path = "../cep-core" }
cep-snfei = { path = "../cep-snfei" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
