[package]
name = "cep-exchange"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Exchange records for the Civic Exchange Protocol (CEP)"
repository = "https://github.com/civic-interconnect/civic-interconnect"
keywords = ["civic", "interconnect", "contract", "government", "exchange"]
categories = ["data-structures"]

[dependencies]
cep-core = { path = "../cep-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
